--- a/JoinShow/JoinShow/Storyboard.storyboard
+++ b/JoinShow/JoinShow/Storyboard.storyboard
@@ -54,7 +54,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nTn-fu-85s">
-                                <rect key="frame" x="20" y="20" width="30" height="30"/>
+                                <rect key="frame" x="20" y="72" width="47" height="30"/>
                                 <state key="normal" title="get">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -63,7 +63,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nGJ-GA-2NJ">
-                                <rect key="frame" x="80" y="20" width="31" height="30"/>
+                                <rect key="frame" x="134" y="72" width="62" height="30"/>
                                 <state key="normal" title="post">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -75,7 +75,7 @@
                                 <rect key="frame" x="20" y="170" width="150" height="2"/>
                             </progressView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="IpS-jw-U4V">
-                                <rect key="frame" x="20" y="110" width="68" height="30"/>
+                                <rect key="frame" x="20" y="110" width="91" height="30"/>
                                 <state key="normal" title="download">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -84,7 +84,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="VB5-wG-BvX">
-                                <rect key="frame" x="134" y="110" width="102" height="30"/>
+                                <rect key="frame" x="134" y="110" width="139" height="30"/>
                                 <state key="normal" title="stop download">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -113,7 +113,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="bWj-lw-2cC">
-                                <rect key="frame" x="20" y="20" width="67" height="30"/>
+                                <rect key="frame" x="20" y="80" width="94" height="30"/>
                                 <state key="normal" title="testString">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -122,7 +122,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ohE-BH-0n4">
-                                <rect key="frame" x="189" y="20" width="58" height="30"/>
+                                <rect key="frame" x="189" y="80" width="84" height="30"/>
                                 <state key="normal" title="testData">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -193,7 +193,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="SZx-FJ-Asn">
-                                <rect key="frame" x="14" y="80" width="55" height="30"/>
+                                <rect key="frame" x="14" y="80" width="78" height="30"/>
                                 <state key="normal" title="Button1">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -202,7 +202,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="oDJ-dg-kkK">
-                                <rect key="frame" x="14" y="118" width="55" height="30"/>
+                                <rect key="frame" x="14" y="118" width="78" height="30"/>
                                 <state key="normal" title="Button2">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -211,7 +211,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="3Py-oQ-jhj">
-                                <rect key="frame" x="7" y="156" width="92" height="30"/>
+                                <rect key="frame" x="7" y="156" width="104" height="30"/>
                                 <state key="normal" title="AVSpeech">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -220,7 +220,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lAn-Ym-5Vi">
-                                <rect key="frame" x="19" y="188" width="37" height="30"/>
+                                <rect key="frame" x="19" y="188" width="55" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Once">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -247,7 +247,8 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="jsW-ID-Fud">
-                                <rect key="frame" x="20" y="20" width="90" height="30"/>
+                                <rect key="frame" x="6" y="78" width="100" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <state key="normal" title="显示背景遮罩">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -279,7 +280,7 @@
             </objects>
             <point key="canvasLocation" x="-667" y="781"/>
         </scene>
-        <!--AnimationVC - Item-->
+        <!--AnimationVC-->
         <scene sceneID="aUm-1t-d0N">
             <objects>
                 <viewController id="uej-ya-UBt" customClass="AnimationVC" sceneMemberID="viewController">
@@ -288,7 +289,6 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="U7f-tE-o3i"/>
                     <navigationItem key="navigationItem" id="lRu-8i-GMI"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ps3-4y-gXU" userLabel="First Responder" sceneMemberID="firstResponder"/>
